# samtag

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  samtag
src/: CMakeLists.txt  main.cpp  version.h.in
test/: reads1.tsv  reads2.tsv  test.bam  test.bam.bai
